完成 GoogleConnector 串接 + 成功取得真實搜尋結果